# cpp-practice

./: .gitignore  CMakeLists.txt  FEATURES.md  LICENSE  README.md  docker-compose.yml  toc.md
.github/workflows/: ci.yml
src/: main.cpp
src/algorithms/coding_interviews/: c_my_string.cpp  c_my_string.hpp
src/core/oop/: complex.cpp  complex.hpp  count.cpp  count.hpp  room.cpp  room.hpp  student.cpp  student.hpp  wall.cpp  wall.hpp
src/include/: obj.hpp  ppp_std_lib_facilities.hpp  std_lib_facilities.hpp  string_container.hpp  string_container_operations.hpp
src/misc/: string_container.cpp  string_container_operations.cpp
tests/: CMakeLists.txt
tests/src/: test_obj.cpp  tests.cpp
tests/src/algorithms/coding_interviews/: LICENSE.txt  test_01_assignment_operator.cpp
tests/src/algorithms/leetcode/: test_valid_perfect_square.cpp
tests/src/core/: test_arrays.cpp  test_basic_io.cpp  test_comments.cpp  test_constants.cpp  test_control_flows.cpp  test_data_types.cpp  test_enumeration.cpp  test_functions.cpp  test_hello_world.cpp  test_literals.cpp  test_oop.cpp  test_operators.cpp  test_storage_class.cpp  test_strings.cpp  test_structures.cpp  test_vector.cpp
tests/src/fixtures/: strings.hpp
tests/src/misc/: test_string_container.cpp
tests/src/mocks/: mock_string_container.hpp
